--- a/.github/workflows/install-test.yml
+++ b/.github/workflows/install-test.yml
@@ -29,6 +29,17 @@ jobs:
         run: |
           git --version
 
+      - name: Setup Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Verify Python Version (pre-install)
+        shell: cmd
+        run: |
+          echo Checking Python before installation:
+          where python
+          python --version
   
       - name: Run Installation Script
         shell: cmd
